--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
 </body>
 </html>
 <header>BlueberryFlix</header>
-    <section>
-        <div>
+    <section class="chamada">
+        <div class="chamada-texto">
             <h1> The Strain</h1>
+            <p>The Strain</p>
         </div>
         <div>
 
@@ -23,3 +24,29 @@
 
 
     </section>
+
+    <section>
+        <h2>filmes e series</h2>
+         <div class="categoria-videos">
+            <a href="https://youtu.be/beToTslH17s?si=2CVK39ROBw3lWdI8">
+                <img src="Scream-5.png">
+            </a>
+
+            <a href="https://youtu.be/lEv1EA2pE7M?si=R3y1kTVHKUu4HPBQ">
+                <img src="MV5BNDA4Nzg1NjQ2NV5BMl5BanBnXkFtZTcwMDYwNTgyMQ@@._V1_FMjpg_UX1000_.jpg">
+            </a>
+
+            <a href="https://youtu.be/ek1ePFp-nBI?si=TT_gKLS3KptolbXW">
+                <img src="Halloween_cover.jpg">
+            </a>
+
+            <a href="https://youtu.be/wfGjWZmyvfo?si=IxZ6EOwAZ8oMF5G4">
+                <img src="2727478-poster.avif">
+            </a>
+         </div>
+
+
+    </section>
+
+</body>
+</html>
