--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
         <h2>filmes e series</h2>
          <div class="categoria-videos">
             <a href="https://youtu.be/beToTslH17s?si=2CVK39ROBw3lWdI8">
-                <img src="Scream-5.png">
+                <img src="https://img.youtube.com/vi/AgJ8UyAj5CE/maxresdefault.jpg">
             </a>
 
             <a href="https://youtu.be/lEv1EA2pE7M?si=R3y1kTVHKUu4HPBQ">
-                <img src="MV5BNDA4Nzg1NjQ2NV5BMl5BanBnXkFtZTcwMDYwNTgyMQ@@._V1_FMjpg_UX1000_.jpg">
+                <img src="https://img.youtube.com/vi/lEv1EA2pE7M/maxresdefault.jpg">
             </a>
 
             <a href="https://youtu.be/ek1ePFp-nBI?si=TT_gKLS3KptolbXW">
-                <img src="Halloween_cover.jpg">
+                <img src="https://img.youtube.com/vi/ek1ePFp-nBI/maxresdefault.jpg">
             </a>
 
             <a href="https://youtu.be/wfGjWZmyvfo?si=IxZ6EOwAZ8oMF5G4">
-                <img src="2727478-poster.avif">
+                <img src="https://img.youtube.com/vi/wfGjWZmyvfo/maxresdefault.jpg">
             </a>
          </div>
 
