--- a/index.html
+++ b/index.html
@@ -1,52 +1,59 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+
 </body>
+
 </html>
 <header>BlueberryFlix</header>
-    <section class="chamada">
-        <div class="chamada-texto">
-            <h1> The Strain</h1>
-            <p>The Strain</p>
-        </div>
-        <div>
+<section class="chamada">
+    <div class="chamada-texto">
+        <h1> The Strain</h1>
+        <p>The Strain</p>
+    </div>
+    <div>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/-IujVjaudUc?si=71yU9UaSjjdxJLSn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/-IujVjaudUc?si=71yU9UaSjjdxJLSn"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
-        </div>
-
-
-    </section>
-
-    <section>
-        <h2>filmes e series</h2>
-         <div class="categoria-videos">
-            <a href="https://youtu.be/beToTslH17s?si=2CVK39ROBw3lWdI8">
-                <img src="https://img.youtube.com/vi/AgJ8UyAj5CE/maxresdefault.jpg">
-            </a>
-
-            <a href="https://youtu.be/lEv1EA2pE7M?si=R3y1kTVHKUu4HPBQ">
-                <img src="https://img.youtube.com/vi/lEv1EA2pE7M/maxresdefault.jpg">
-            </a>
-
-            <a href="https://youtu.be/ek1ePFp-nBI?si=TT_gKLS3KptolbXW">
-                <img src="https://img.youtube.com/vi/ek1ePFp-nBI/maxresdefault.jpg">
-            </a>
-
-            <a href="https://youtu.be/wfGjWZmyvfo?si=IxZ6EOwAZ8oMF5G4">
-                <img src="https://img.youtube.com/vi/wfGjWZmyvfo/maxresdefault.jpg">
-            </a>
-         </div>
+    </div>
 
 
-    </section>
+</section>
+
+<section>
+    <h2>filmes e series</h2>
+    <div class="categoria-videos">
+        <a href="https://youtu.be/beToTslH17s?si=2CVK39ROBw3lWdI8">
+            <img src="https://img.youtube.com/vi/AgJ8UyAj5CE/maxresdefault.jpg">
+        </a>
+
+        <a href="https://youtu.be/lEv1EA2pE7M?si=R3y1kTVHKUu4HPBQ">
+            <img src="https://img.youtube.com/vi/lEv1EA2pE7M/maxresdefault.jpg">
+        </a>
+
+        <a href="https://youtu.be/ek1ePFp-nBI?si=TT_gKLS3KptolbXW">
+            <img src="https://img.youtube.com/vi/ek1ePFp-nBI/maxresdefault.jpg">
+        </a>
+
+        <a href="https://youtu.be/wfGjWZmyvfo?si=IxZ6EOwAZ8oMF5G4">
+            <img src="https://img.youtube.com/vi/wfGjWZmyvfo/maxresdefault.jpg">
+        </a>
+    </div>
+
+
+</section>
 
 </body>
+
 </html>
